--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,12 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+
+
+    <!-- Google Apis -->
+   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCtZC9oiD58Lm3rqOFjnRJXE5UhRR1pHz8" async defer></script>
+   <script src="https://google-maps-utility-library-v3.googlecode.com/svn/trunk/infobox/src/infobox.js"></script>
+
 </head>
 
 <body>
