--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
 
 
     <!-- Google Apis -->
-   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCtZC9oiD58Lm3rqOFjnRJXE5UhRR1pHz8" async defer></script>
+   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCtZC9oiD58Lm3rqOFjnRJXE5UhRR1pHz8&libraries=places" async defer></script>
    <script src="https://google-maps-utility-library-v3.googlecode.com/svn/trunk/infobox/src/infobox.js"></script>
 
 </head>
